test/domains/compilerErrors/partialQueriedDomain-multiple.good
partialQueriedDomain-multiple.chpl:21: In function 'c_l':
partialQueriedDomain-multiple.chpl:21: error: cannot query part of a domain
partialQueriedDomain-multiple.chpl:21: error: cannot query part of a domain
